# CSXCAD

./: .gitignore  AI_POLICY.md  CMakeLists.txt  CSFunctionParser.cpp  CSFunctionParser.h  CSPrimitives.cpp  CSPrimitives.h  CSProperties.cpp  CSProperties.h  CSRectGrid.cpp  CSRectGrid.h  CSTransform.cpp  CSTransform.h  CSUseful.cpp  CSUseful.h  CSXCAD.pro  CSXCAD_Global.h  ContinuousStructure.cpp  ContinuousStructure.h  INSTALL  NEWS  ParameterCoord.cpp  ParameterCoord.h  ParameterObjects.cpp  ParameterObjects.h  README  README.md  doc.pri  doxydoc  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
doc/: doc.pri  doxydoc
linux/: CSXCAD.dsc  CSXCAD.spec  CSXGeomPlot.m.patch  README.patch  debian.changelog  debian.control  debian.csxcad.install  debian.rules  debian.series
matlab/: Add2Property.m  AddBox.m  AddConductingSheet.m  AddCurve.m  AddCylinder.m  AddCylindricalShell.m  AddDebyeMaterial.m  AddDiscMaterial.m  AddDjordjevicSarkarMaterial.m  AddDump.m  AddExcitation.m  AddLinPoly.m  AddLorentzMaterial.m  AddLumpedElement.m  AddMaterial.m  AddMetal.m  AddPlaneWaveExcite.m  AddPoint.m  AddPolygon.m  AddPolyhedron.m  AddPrimitiveArgs.m  AddProbe.m  AddPropAttribute.m  AddProperty.m  AddRotPoly.m  AddSphere.m  AddSphericalShell.m  AddWire.m  AnalyseMesh.m  AutoSmoothMeshLines.m  CSXGeomPlot.m  CalcDebyeMaterial.m  CalcDjordjevicSarkarApprox.m  CalcDrudeMaterial.m  CalcLorentzMaterial.m  CheckMesh.m  Convert_VF_DiscMaterial.m  CreateDiscMaterial.m  DefineRectGrid.m  DetectEdges.m  (+27 more)
matlab/private/: Add2Property.m  AddProperty.m  CheckSymmtricLines.m  FindProperty.m  GetPropertyType.m  SetPropertyArgs.m  SmoothRange.m  octave_struct2xml_2.m  struct_2_xmlNode.m  vector2str.m
python/: README.md  pyproject.toml  setup.py
python/CSXCAD/: CSPrimitives.pxd  CSPrimitives.pyx  CSProperties.pxd  CSProperties.pyx  CSRectGrid.pxd  CSRectGrid.pyx  CSTransform.pxd  CSTransform.pyx  CSXCAD.pxd  CSXCAD.pyx  ParameterObjects.pxd  ParameterObjects.pyx  SmoothMeshLines.py  Utilities.pyx  __init__.py
python/CSXCAD/GUI/: qtSettings.py  qtViewer.py  vtkPrimitives.py
python/CSXCAD/qtViewer/: __init__.py  qtSettings.py  qtViewer.py  vtkPrimitives.py
python/bootstrap/: setuptools_build_meta_custom.py
python/doc/: CSXCAD.rst  Makefile  conf.py  index.rst
python/doc/CSXCAD_PY/: CSPrimitives.rst  CSProperties.rst
python/doc/CSXCAD_PY/CSProperties/: CSProperties.rst
python/examples/: StaticSolver.py
python/pyCSXCAD/: CSPrimitives.pxd  CSPrimitives.pyx  CSProperties.pxd  CSProperties.pyx  CSRectGrid.pxd  CSRectGrid.pyx  CSXCAD.pyx  ParameterObjects.pxd  ParameterObjects.pyx  SmoothMeshLines.py
python/tests/: sphere.ply  sphere.stl  test_CSPrimitives.py  test_CSProperties.py  test_CSRectGrid.py  test_CSTransform.py  test_CSXCAD.py  test_SmoothMeshLines.py  test_Utilities.py  test_XML_RoundTrip.py
src/: CMakeLists.txt  CSBackgroundMaterial.cpp  CSBackgroundMaterial.h  CSFunctionParser.cpp  CSModeData.cpp  CSModeData.h  CSModeFileParser.cpp  CSModeFileParser.h  CSPrimBox.cpp  CSPrimBox.h  CSPrimCurve.cpp  CSPrimCurve.h  CSPrimCylinder.cpp  CSPrimCylinder.h  CSPrimCylindricalShell.cpp  CSPrimCylindricalShell.h  CSPrimLinPoly.cpp  CSPrimLinPoly.h  CSPrimMultiBox.cpp  CSPrimMultiBox.h  CSPrimPoint.cpp  CSPrimPoint.h  CSPrimPolygon.cpp  CSPrimPolygon.h  CSPrimPolyhedron.cpp  CSPrimPolyhedron.h  CSPrimPolyhedronReader.cpp  CSPrimPolyhedronReader.h  CSPrimPolyhedron_p.h  CSPrimRotPoly.cpp  CSPrimRotPoly.h  CSPrimSphere.cpp  CSPrimSphere.h  CSPrimSphericalShell.cpp  CSPrimSphericalShell.h  CSPrimUserDefined.cpp  CSPrimUserDefined.h  CSPrimWire.cpp  CSPrimWire.h  CSPrimitives.cpp  (+48 more)
