[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "CSXCAD"
version = "0.6.2"
dependencies = [
    # BSD 3-Clause (https://github.com/numpy/numpy/blob/main/LICENSE.txt)
    "numpy",

    # Matplotlib license (https://github.com/matplotlib/matplotlib/blob/main/LICENSE/LICENSE)
    "matplotlib >= 2.1.0"
]
requires-python = ">=3.4"
authors = [
    {name = "Thorsten Liebig", email = "Thorsten.Liebig@gmx.de"}
]
maintainers = [
    {name = "Thorsten Liebig", email = "Thorsten.Liebig@gmx.de"}
]
description = "Python interface for the CSXCAD library"
readme = "README.md"
license = "LGPL-3.0-or-later"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
]

[project.urls]
Homepage = "https://openems.de"
Documentation = "https://docs.openems.de"
Repository = "https://github.com/thliebig/CSXCAD.git"
"Bug Tracker" = "https://github.com/thliebig/CSXCAD/issues"
