[build-system]
requires = [
    "setuptools",
    "cython",
]

# A thin wrapper above setuptools.build_meta, which inserts an
# additional dependency dynamically (because we can't use any
# any environment variables in "requires"). Currently we only
# insert one dependency:
#
#     'setuptools_scm >= 8; python_version >= "3.9"'
#
# To disable it, use "export CSXCAD_NOSCM=1".
build-backend = "setuptools_build_meta_custom"
backend-path = ["bootstrap"]

[tool.setuptools_scm]
root = "../"
version_file = "CSXCAD/__version__.py"
version_scheme = "no-guess-dev"

# Make sure the following line can be understood by the brute-force
# parser in setup.py, which finds "fallback_version" and reads everything
# after the equal (=) sign, on legacy usage without setuptools_scm (e.g.
# calling setup.py directly).
fallback_version = "0.6.3"

[project]
name = "CSXCAD"
dynamic = ["version"]
dependencies = [
    # BSD 3-Clause (https://github.com/numpy/numpy/blob/main/LICENSE.txt)
    "numpy",

    # Matplotlib license (https://github.com/matplotlib/matplotlib/blob/main/LICENSE/LICENSE)
    "matplotlib >= 2.1.0"
]
requires-python = ">=3.4"
authors = [
    {name = "Thorsten Liebig", email = "Thorsten.Liebig@gmx.de"}
]
maintainers = [
    {name = "Thorsten Liebig", email = "Thorsten.Liebig@gmx.de"}
]
description = "Python interface for the CSXCAD library"
readme = "README.md"
license = "LGPL-3.0-or-later"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
]

[project.urls]
Homepage = "https://openems.de"
Documentation = "https://docs.openems.de"
Repository = "https://github.com/thliebig/CSXCAD.git"
"Bug Tracker" = "https://github.com/thliebig/CSXCAD/issues"
